<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GymApp</string>

    <string name="common_error">Volley error</string>
    <string name="common_error_title">Request failed</string>

    <string name="authentication_status">Authentication status:</string>
    <string name="not_authenticated">Not authenticated</string>
    <string name="authenticated">Authenticated</string>

    <string name="login_button">Login</string>

    <string name="menu_five_workouts">LAST 5 WORKOUTS</string>
    <string name="menu_add_workout">ADD WORKOUT</string>
    <string name="menu_logout">LOGOUT</string>

    <string name="move_name">Move</string>
    <string name="move_reps">Reps</string>
    <string name="move_sets">Sets</string>
    <string name="move_weight">Weight</string>

    <string name="workout_title">WORKOUT</string>
    <string name="workout_add">Add</string>
    <string name="workout_remove">Remove</string>
</resources>
