<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move_name"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/move_sets"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/move_reps"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/move_weight"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setRowContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
</LinearLayout>