<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/button_gray"
    android:padding="8dp">

    <TextView
        android:id="@+id/moveName"
        style="@style/Text16Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/setListHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Text14Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/move_sets"/>

        <TextView
            style="@style/Text14Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/move_reps"/>

        <TextView
            style="@style/Text14Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/move_weight"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
</LinearLayout>